--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Buffalo Ridge</title>
-
-  <!-- Typewriter Font -->
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-
   <style>
     body {
       margin: 0;
@@ -37,6 +34,23 @@
       transition: all 0.4s ease;
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
       animation: flicker 2.7s infinite;
+      cursor: pointer;
+    }
+
+    .portrait-img-mobile {
+      height: 80px;
+      width: auto;
+      border-radius: 6px;
+      filter: grayscale(100%);
+      animation: flicker 2.4s infinite;
+      transition: all 0.4s ease;
+      flex-shrink: 1;
+      cursor: pointer;
+    }
+
+    .portrait-img-mobile:hover {
+      filter: grayscale(0%) brightness(1.1);
+      transform: scale(1.05);
     }
 
     @keyframes flicker {
@@ -68,56 +82,50 @@
       gap: 1rem;
     }
 
-    @media (max-width: 768px) {
-      .portrait-wrapper {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .portrait-column {
-        display: none;
-      }
-
-      .portrait-row-mobile {
-        display: flex;
-        justify-content: center;
-        gap: 1rem;
-        flex-wrap: nowrap;
-        margin-top: 1rem;
-        margin-bottom: 1.5rem;
-        max-width: 90vw;
-      }
-
-      .mobile-profile {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .portrait-img-mobile {
-        height: 80px;
-        width: auto;
-        border-radius: 6px;
-        filter: grayscale(100%);
-        animation: flicker 2.4s infinite;
-        transition: all 0.4s ease;
-        flex-shrink: 1;
-      }
-
-      .portrait-img-mobile:hover {
-        filter: grayscale(0%) brightness(1.1);
-        transform: scale(1.05);
-      }
-
-      .logo {
-        height: 300px;
-      }
+    .bio-tooltip {
+      display: none;
+      position: absolute;
+      background-color: #111;
+      border: 1px solid #444;
+      padding: 10px;
+      border-radius: 6px;
+      max-width: 250px;
+      font-size: 0.9em;
+      z-index: 100;
+      text-align: left;
     }
 
-    p {
-      font-size: 1.2em;
-      max-width: 700px;
-      margin: 0 auto 1rem;
+    .mobile-modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.9);
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      text-align: left;
+      padding: 1rem;
+    }
+
+    .mobile-modal img {
+      max-height: 40vh;
+      margin-bottom: 1rem;
+    }
+
+    .mobile-modal p {
+      max-width: 90vw;
+    }
+
+    .mobile-modal button {
+      margin-top: 1rem;
+      background-color: #444;
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      cursor: pointer;
     }
 
     .button-grid {
@@ -170,7 +178,6 @@
       padding: 10px;
       margin: 10px 0;
       width: 100%;
-      max-width: 100%;
       box-sizing: border-box;
       border: 2px solid #444;
       background-color: #111;
@@ -178,7 +185,6 @@
     }
 
     button {
-      cursor: pointer;
       background-color: #333;
       border-radius: 4px;
       transition: background 0.3s;
@@ -190,8 +196,7 @@
   </style>
 </head>
 <body>
-
-  <!-- Background Hum -->
+   <!-- Background Hum -->
   <audio id="bg-audio" src="sounds/creepy_background_hum_with_whispers.mp3" autoplay loop muted hidden></audio>
   <script>
     window.addEventListener('click', function enableAudio() {
@@ -202,7 +207,7 @@
     });
   </script>
 
-  <!-- Team Layout -->
+  <!-- Portraits Layout -->
   <div class="portrait-wrapper">
     <div class="portrait-column">
       <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
@@ -217,14 +222,23 @@
     </div>
   </div>
 
-  <!-- Mobile Portraits -->
-  <div class="portrait-row-mobile" style="display:none;">
+  <!-- Mobile Portrait Row -->
+  <div class="portrait-row-mobile">
     <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
     <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
     <div class="mobile-profile"><p>Steven</p><img src="STEVEN.png" alt="Steven" class="portrait-img-mobile"></div>
     <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
   </div>
 
+  <!-- Bio Tooltip & Modal -->
+  <div id="bio-tooltip" class="bio-tooltip"></div>
+  <div id="bio-modal" class="mobile-modal">
+    <img id="modal-img" src="" alt="">
+    <p id="modal-text"></p>
+    <button onclick="hideModal()">Close</button>
+  </div>
+
+  <!-- Description -->
   <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
   <p><strong>Right here from up on the Ridge.</strong></p>
 
@@ -238,7 +252,7 @@
     <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
   </div>
 
-  <!-- Sound Section -->
+  <!-- Sound Bites -->
   <div id="sound-section" class="section" style="display: none;">
     <h2>Sound Bites</h2>
     <div class="button-grid">
@@ -251,7 +265,7 @@
     <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
   </div>
 
-  <!-- YouTube Embed -->
+  <!-- YouTube -->
   <div class="section">
     <h2>Watch the Latest Episode</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
@@ -276,7 +290,7 @@
     </form>
   </div>
 
-  <!-- Comment Form -->
+  <!-- Comments -->
   <div class="section">
     <h2>Leave a Comment</h2>
     <form action="#" method="post">
@@ -287,6 +301,37 @@
   </div>
 
 <script>
+  const bios = {
+    "Drew": "Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.",
+    "Rob": "A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.",
+    "Ty": "The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.",
+    "Steven": "The Genius of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that..."
+  };
+
+  function showTooltip(e, name) {
+    const tooltip = document.getElementById('bio-tooltip');
+    tooltip.textContent = bios[name];
+    tooltip.style.display = 'block';
+    tooltip.style.left = e.pageX + 15 + 'px';
+    tooltip.style.top = e.pageY - 20 + 'px';
+  }
+
+  function hideTooltip() {
+    document.getElementById('bio-tooltip').style.display = 'none';
+  }
+
+  function showModal(name, imgSrc) {
+    const modal = document.getElementById('bio-modal');
+    document.getElementById('modal-img').src = imgSrc;
+    document.getElementById('modal-img').alt = name;
+    document.getElementById('modal-text').textContent = bios[name];
+    modal.style.display = 'flex';
+  }
+
+  function hideModal() {
+    document.getElementById('bio-modal').style.display = 'none';
+  }
+
   function toggleSounds() {
     const section = document.getElementById('sound-section');
     section.style.display = section.style.display === 'none' ? 'block' : 'none';
@@ -303,9 +348,14 @@
   }
 
   window.addEventListener("load", () => {
-    if (window.innerWidth <= 768) {
-      document.querySelector(".portrait-row-mobile").style.display = "flex";
-    }
+    document.querySelectorAll('.portrait-img')?.forEach(img => {
+      img.addEventListener('mouseenter', (e) => showTooltip(e, img.alt));
+      img.addEventListener('mouseleave', hideTooltip);
+    });
+
+    document.querySelectorAll('.portrait-img-mobile')?.forEach(img => {
+      img.addEventListener('click', () => showModal(img.alt, img.src));
+    });
   });
 </script>
 
