--- a/index.html
+++ b/index.html
@@ -17,15 +17,37 @@
       padding: 1rem;
       text-align: center;
     }
-
-    .logo {
-      height: 400px;
-      width: auto;
-      max-width: 90vw;
-      animation: flickerLogo 3.2s infinite;
-      filter: grayscale(100%);
+    .flicker {
+      animation: flicker 2.7s infinite;
     }
-
+    .flicker-logo {
+      animation: flickerLogo 3.2s infinite;
+    }
+    @keyframes flicker {
+      0%, 19%, 22%, 62%, 64%, 100% { opacity: 1; }
+      20%, 21%, 63% { opacity: 0.4; }
+      23% { opacity: 0.8; }
+      65% { opacity: 0.3; }
+    }
+    @keyframes flickerLogo {
+      0%, 5%, 9%, 14%, 20%, 100% { opacity: 1; }
+      6%, 10%, 13%, 15% { opacity: 0.5; }
+      16%, 19% { opacity: 0.2; }
+    }
+    .portrait-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      margin-bottom: 2rem;
+    }
+    .portrait-column {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+    }
     .portrait-img {
       height: 200px;
       width: auto;
@@ -36,52 +58,13 @@
       animation: flicker 2.7s infinite;
       cursor: pointer;
     }
-
-    .portrait-img-mobile {
-      height: 80px;
+    .logo {
+      height: 400px;
       width: auto;
-      border-radius: 6px;
+      max-width: 90vw;
       filter: grayscale(100%);
-      animation: flicker 2.4s infinite;
-      transition: all 0.4s ease;
-      flex-shrink: 1;
-      cursor: pointer;
+      animation: flickerLogo 3.2s infinite;
     }
-
-    .portrait-img-mobile:hover {
-      filter: grayscale(0%) brightness(1.1);
-      transform: scale(1.05);
-    }
-
-    @keyframes flicker {
-      0%, 19%, 22%, 62%, 64%, 100% { opacity: 1; }
-      20%, 21%, 63% { opacity: 0.4; }
-      23% { opacity: 0.8; }
-      65% { opacity: 0.3; }
-    }
-
-    @keyframes flickerLogo {
-      0%, 5%, 9%, 14%, 20%, 100% { opacity: 1; }
-      6%, 10%, 13%, 15% { opacity: 0.5; }
-      16%, 19% { opacity: 0.2; }
-    }
-
-    .portrait-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 2rem;
-      flex-wrap: wrap;
-      margin-bottom: 2rem;
-    }
-
-    .portrait-column {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 1rem;
-    }
-
     .bio-tooltip {
       display: none;
       position: absolute;
@@ -94,7 +77,6 @@
       z-index: 100;
       text-align: left;
     }
-
     .mobile-modal {
       display: none;
       position: fixed;
@@ -108,16 +90,13 @@
       text-align: left;
       padding: 1rem;
     }
-
     .mobile-modal img {
       max-height: 40vh;
       margin-bottom: 1rem;
     }
-
     .mobile-modal p {
       max-width: 90vw;
     }
-
     .mobile-modal button {
       margin-top: 1rem;
       background-color: #444;
@@ -127,7 +106,6 @@
       font-size: 1rem;
       cursor: pointer;
     }
-
     .button-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
@@ -136,11 +114,9 @@
       max-width: 800px;
       margin: 1.5rem 0;
     }
-
     .ridge-link {
       text-decoration: none;
     }
-
     .ridge-button {
       background-color: #111;
       color: #eee;
@@ -155,24 +131,20 @@
       transition: background 0.3s, transform 0.2s;
       cursor: pointer;
     }
-
     .ridge-button:hover {
       background-color: #222;
       transform: scale(1.05);
     }
-
     .section {
       margin-top: 2rem;
       max-width: 700px;
       width: 100%;
     }
-
     iframe, audio {
       width: 100%;
       margin-top: 1rem;
       border: none;
     }
-
     input, textarea, button {
       font-family: 'Special Elite', monospace;
       padding: 10px;
@@ -183,123 +155,114 @@
       background-color: #111;
       color: #fff;
     }
-
     button {
       background-color: #333;
       border-radius: 4px;
       transition: background 0.3s;
     }
-
     button:hover {
       background-color: #555;
     }
   </style>
 </head>
 <body>
-   <!-- Background Hum -->
-  <audio id="bg-audio" src="sounds/creepy_background_hum_with_whispers.mp3" autoplay loop muted hidden></audio>
-  <script>
-    window.addEventListener('click', function enableAudio() {
-      const audio = document.getElementById('bg-audio');
-      audio.muted = false;
-      audio.play().catch(e => console.log('Playback error:', e));
-      window.removeEventListener('click', enableAudio);
-    });
-  </script>
+<!-- Background Hum -->
+<audio id="bg-audio" src="sounds/creepy_background_hum_with_whispers.mp3" autoplay loop muted hidden></audio>
+<script>
+  window.addEventListener('click', function enableAudio() {
+    const audio = document.getElementById('bg-audio');
+    audio.muted = false;
+    audio.play().catch(e => console.log('Playback error:', e));
+    window.removeEventListener('click', enableAudio);
+  });
+</script>
 
-  <!-- Portraits Layout -->
-  <div class="portrait-wrapper">
-    <div class="portrait-column">
-      <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
-      <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
-    </div>
-    <div>
-      <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
-    </div>
-    <div class="portrait-column">
-      <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
-      <div><img src="STEVEN.png" alt="Steven" class="portrait-img"><p>Steven</p></div>
-    </div>
+<!-- Portraits -->
+<div class="portrait-wrapper">
+  <div class="portrait-column">
+    <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
+    <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
   </div>
-
-  <!-- Mobile Portrait Row -->
-  <div class="portrait-row-mobile">
-    <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Steven</p><img src="STEVEN.png" alt="Steven" class="portrait-img-mobile"></div>
-    <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
+  <div>
+    <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
   </div>
-
-  <!-- Bio Tooltip & Modal -->
-  <div id="bio-tooltip" class="bio-tooltip"></div>
-  <div id="bio-modal" class="mobile-modal">
-    <img id="modal-img" src="" alt="">
-    <p id="modal-text"></p>
-    <button onclick="hideModal()">Close</button>
+  <div class="portrait-column">
+    <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
+    <div><img src="STEVEN.png" alt="Steven" class="portrait-img"><p>Steven</p></div>
   </div>
+</div>
 
-  <!-- Description -->
-  <p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
-  <p><strong>Right here from up on the Ridge.</strong></p>
+<!-- Bios -->
+<div id="bio-tooltip" class="bio-tooltip"></div>
+<div id="bio-modal" class="mobile-modal">
+  <img id="modal-img" src="" alt="">
+  <p id="modal-text"></p>
+  <button onclick="hideModal()">Close</button>
+</div>
 
-  <!-- Buttons -->
+<!-- Description -->
+<p>New episodes every Thursday... Buffalo Ridge is your source for chilling stories, strange events, and voices.</p>
+<p><strong>Right here from up on the Ridge.</strong></p>
+
+<!-- Buttons -->
+<div class="button-grid">
+  <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
+  <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
+  <div class="ridge-link"><div class="ridge-button" onclick="toggleSounds()">Sounds</div></div>
+  <a href="https://youtu.be/HRAJbOmm6Lk?si=sgOuRF0foGBzJJxU" target="_blank" class="ridge-link"><div class="ridge-button">About</div></a>
+  <a href="https://www.facebook.com/photo/?fbid=122102987132919073&set=a.122102987318919073" target="_blank" class="ridge-link"><div class="ridge-button">Touch Ty's Weener</div></a>
+  <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
+</div>
+
+<!-- Sound Bites -->
+<div id="sound-section" class="section" style="display: none;">
+  <h2>Sound Bites</h2>
   <div class="button-grid">
-    <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button">Spotify</div></a>
-    <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button">YouTube</div></a>
-    <div class="ridge-link"><div class="ridge-button" onclick="toggleSounds()">Sounds</div></div>
-    <a href="https://youtu.be/HRAJbOmm6Lk?si=sgOuRF0foGBzJJxU" target="_blank" class="ridge-link"><div class="ridge-button">About</div></a>
-    <a href="https://www.facebook.com/photo/?fbid=122102987132919073&set=a.122102987318919073" target="_blank" class="ridge-link"><div class="ridge-button">Touch Ty's Weener</div></a>
-    <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button">Email Us</div></a>
+    <button onclick="playSound('sound1')">DID YOU SEE THAT</button>
+    <button onclick="playSound('sound2')">D in my B</button>
+    <button onclick="playSound('sound3')">GUN SWIM</button>
   </div>
+  <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
+  <audio id="sound2" src="sounds/D in my B.mp3"></audio>
+  <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
+</div>
 
-  <!-- Sound Bites -->
-  <div id="sound-section" class="section" style="display: none;">
-    <h2>Sound Bites</h2>
-    <div class="button-grid">
-      <button onclick="playSound('sound1')">DID YOU SEE THAT</button>
-      <button onclick="playSound('sound2')">D in my B</button>
-      <button onclick="playSound('sound3')">GUN SWIM</button>
-    </div>
-    <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-    <audio id="sound2" src="sounds/D in my B.mp3"></audio>
-    <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
-  </div>
+<!-- YouTube -->
+<div class="section">
+  <h2>Watch the Latest Episode</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
+</div>
 
-  <!-- YouTube -->
-  <div class="section">
-    <h2>Watch the Latest Episode</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
-  </div>
+<!-- Audio Player -->
+<div class="section">
+  <h2>Listen to the Latest Episode</h2>
+  <audio controls>
+    <source src="your-latest-episode.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
 
-  <!-- Audio Player -->
-  <div class="section">
-    <h2>Listen to the Latest Episode</h2>
-    <audio controls>
-      <source src="your-latest-episode.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </div>
+<!-- Newsletter -->
+<div class="section">
+  <h2>Subscribe to Our Newsletter</h2>
+  <form action="mailto:your@email.com" method="post" enctype="text/plain">
+    <input type="text" name="name" placeholder="Your name" required>
+    <input type="email" name="email" placeholder="Your email" required>
+    <button type="submit">Sign Up</button>
+  </form>
+</div>
 
-  <!-- Newsletter -->
-  <div class="section">
-    <h2>Subscribe to Our Newsletter</h2>
-    <form action="mailto:your@email.com" method="post" enctype="text/plain">
-      <input type="text" name="name" placeholder="Your name" required>
-      <input type="email" name="email" placeholder="Your email" required>
-      <button type="submit">Sign Up</button>
-    </form>
-  </div>
+<!-- Comments -->
+<div class="section">
+  <h2>Leave a Comment</h2>
+  <form action="#" method="post">
+    <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
+    <button type="submit">Submit</button>
+  </form>
+  <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
+</div>
 
-  <!-- Comments -->
-  <div class="section">
-    <h2>Leave a Comment</h2>
-    <form action="#" method="post">
-      <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
-      <button type="submit">Submit</button>
-    </form>
-    <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
-  </div>
-
+<!-- Scripts -->
 <script>
   const bios = {
     "Drew": "Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.",
@@ -340,8 +303,10 @@
   function playSound(id) {
     const sounds = document.querySelectorAll('audio');
     sounds.forEach(audio => {
-      audio.pause();
-      audio.currentTime = 0;
+      if (audio.id !== id) {
+        audio.pause();
+        audio.currentTime = 0;
+      }
     });
     const selected = document.getElementById(id);
     if (selected) selected.play();
@@ -351,13 +316,9 @@
     document.querySelectorAll('.portrait-img')?.forEach(img => {
       img.addEventListener('mouseenter', (e) => showTooltip(e, img.alt));
       img.addEventListener('mouseleave', hideTooltip);
-    });
-
-    document.querySelectorAll('.portrait-img-mobile')?.forEach(img => {
-      img.addEventListener('click', () => showModal(img.alt, img.src));
+      img.addEventListener('click', () => showModal(img.alt, img.src)); // support mobile
     });
   });
 </script>
-
 </body>
 </html>
