--- a/index.html
+++ b/index.html
@@ -14,21 +14,28 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 1rem;
+      padding: 2rem;
       text-align: center;
     }
-    .flicker { animation: flicker 2.7s infinite; }
-    .flicker-logo { animation: flickerLogo 3.2s infinite; }
-    @keyframes flicker {
-      0%, 19%, 22%, 62%, 64%, 100% { opacity: 1; }
-      20%, 21%, 63% { opacity: 0.4; }
-      23% { opacity: 0.8; }
-      65% { opacity: 0.3; }
+
+    img.logo {
+      height: 300px;
+      animation: flickerLogo 3s infinite;
+      filter: grayscale(100%);
     }
+
     @keyframes flickerLogo {
-      0%, 5%, 9%, 14%, 20%, 100% { opacity: 1; }
-      6%, 10%, 13%, 15% { opacity: 0.5; }
-      16%, 19% { opacity: 0.2; }
+      0%, 19%, 21%, 100% { opacity: 1; }
+      20% { opacity: 0.4; }
+    }
+
+    .flicker {
+      animation: flickerText 2s infinite;
+    }
+
+    @keyframes flickerText {
+      0%, 18%, 22%, 25%, 53%, 57%, 100% { opacity: 1; }
+      19%, 23%, 55% { opacity: 0.4; }
     }
 
     .portrait-wrapper {
@@ -36,274 +43,61 @@
       justify-content: center;
       align-items: center;
       gap: 2rem;
-      flex-wrap: wrap;
       margin-bottom: 2rem;
     }
+
     .portrait-column {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 1rem;
     }
+
     .portrait-img {
       height: 200px;
-      width: auto;
       border-radius: 8px;
       filter: grayscale(100%);
-      transition: all 0.4s ease;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
-      animation: flicker 2.7s infinite;
-      cursor: pointer;
-    }
-    .logo {
-      height: 400px;
-      width: auto;
-      max-width: 90vw;
-      filter: grayscale(100%);
-      animation: flickerLogo 3.2s infinite;
-    }
-
-    /* MOBILE ONLY */
-    @media (min-width: 768px) {
-      .mobile-profile-row {
-        display: none;
-      }
-    }
-
-    @media (max-width: 767px) {
-      .portrait-wrapper {
-        display: none;
-      }
+      animation: flickerText 2.5s infinite;
     }
 
     .mobile-profile-row {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      max-width: 90vw;
       width: 100%;
+      max-width: 90vw;
       gap: 1rem;
-      margin-bottom: 2rem;
+      margin-top: 1rem;
     }
+
     .mobile-profile {
       display: flex;
       flex-direction: column;
       align-items: center;
-      cursor: pointer;
     }
+
     .portrait-img-mobile {
       height: 100px;
       border-radius: 6px;
       filter: grayscale(100%);
-      animation: flicker 2.4s infinite;
+      animation: flickerText 2s infinite;
     }
 
-    .bio-tooltip {
-      display: none;
-      position: absolute;
+    .button-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      width: 100%;
+      max-width: 800px;
+      margin: 2rem 0;
+    }
+
+    .ridge-button {
       background-color: #111;
-      border: 1px solid #444;
-      padding: 10px;
+      color: #eee;
+      border: 3px solid #444;
       border-radius: 6px;
-      max-width: 250px;
-      font-size: 0.9em;
-      z-index: 100;
-      text-align: left;
-    }
-
-    .mobile-modal {
-      display: none;
-      position: fixed;
-      z-index: 999;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.9);
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      text-align: left;
-      padding: 1rem;
-    }
-    .mobile-modal img {
-      max-height: 40vh;
-      margin-bottom: 1rem;
-    }
-    .mobile-modal p {
-      max-width: 90vw;
-    }
-    .mobile-modal button {
-      margin-top: 1rem;
-      background-color: #444;
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-
-<!-- DESKTOP: 2-left / logo / 2-right -->
-<div class="portrait-wrapper">
-  <div class="portrait-column">
-    <div><img src="DREW.png" alt="Drew" class="portrait-img"><p>Drew</p></div>
-    <div><img src="TY.png" alt="Ty" class="portrait-img"><p>Ty</p></div>
-  </div>
-  <div>
-    <img src="BUFFALO RIDGE LOGO 4.0.png" alt="Buffalo Ridge Logo" class="logo">
-  </div>
-  <div class="portrait-column">
-    <div><img src="ROB.png" alt="Rob" class="portrait-img"><p>Rob</p></div>
-    <div><img src="STEVEN.png" alt="Steven" class="portrait-img"><p>Steven</p></div>
-  </div>
-</div>
-
-<!-- MOBILE: single horizontal row -->
-<div class="mobile-profile-row">
-  <div class="mobile-profile"><p>Drew</p><img src="DREW.png" alt="Drew" class="portrait-img-mobile"></div>
-  <div class="mobile-profile"><p>Rob</p><img src="ROB.png" alt="Rob" class="portrait-img-mobile"></div>
-  <div class="mobile-profile"><p>Steven</p><img src="STEVEN.png" alt="Steven" class="portrait-img-mobile"></div>
-  <div class="mobile-profile"><p>Ty</p><img src="TY.png" alt="Ty" class="portrait-img-mobile"></div>
-</div>
-
-<!-- BIOS -->
-<div id="bio-tooltip" class="bio-tooltip"></div>
-<div id="bio-modal" class="mobile-modal">
-  <img id="modal-img" src="" alt="">
-  <p id="modal-text"></p>
-  <button onclick="hideModal()">Close</button>
-</div>
-<!-- Background Hum -->
-<audio id="bg-audio" src="sounds/creepy_background_hum_with_whispers.mp3" autoplay loop muted hidden></audio>
-<script>
-  window.addEventListener('click', function enableAudio() {
-    const audio = document.getElementById('bg-audio');
-    audio.muted = false;
-    audio.play().catch(e => console.log('Playback error:', e));
-    window.removeEventListener('click', enableAudio);
-  });
-</script>
-
-<!-- Buttons -->
-<div class="button-grid">
-  <a href="https://open.spotify.com/show/4iG0SrMt0ATU8rqnAcWy3e" target="_blank" class="ridge-link"><div class="ridge-button flicker">Spotify</div></a>
-  <a href="https://www.youtube.com/channel/UCHDjvZvemkFoVgsXagJYShw" target="_blank" class="ridge-link"><div class="ridge-button flicker">YouTube</div></a>
-  <div class="ridge-link"><div class="ridge-button flicker" onclick="toggleSounds()">Sounds</div></div>
-  <a href="https://youtu.be/HRAJbOmm6Lk?si=sgOuRF0foGBzJJxU" target="_blank" class="ridge-link"><div class="ridge-button flicker">About</div></a>
-  <a href="https://www.facebook.com/photo/?fbid=122102987132919073&set=a.122102987318919073" target="_blank" class="ridge-link"><div class="ridge-button flicker">Touch Ty's Weener</div></a>
-  <a href="mailto:rob.auburnviewmedia@gmail.com" class="ridge-link"><div class="ridge-button flicker">Email Us</div></a>
-</div>
-
-<!-- Sound Bites -->
-<div id="sound-section" class="section" style="display: none;">
-  <h2>Sound Bites</h2>
-  <div class="button-grid">
-    <button onclick="playSound('sound1')">DID YOU SEE THAT</button>
-    <button onclick="playSound('sound2')">D in my B</button>
-    <button onclick="playSound('sound3')">GUN SWIM</button>
-  </div>
-  <audio id="sound1" src="sounds/DID YOU SEE THAT.mp3"></audio>
-  <audio id="sound2" src="sounds/D in my B.mp3"></audio>
-  <audio id="sound3" src="sounds/GUN SWIM.mp3"></audio>
-</div>
-
-<!-- Video -->
-<div class="section">
-  <h2>Watch the Latest Episode</h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/ARvMdWtVNgQ?si=r9ZAtTNNZaGYOEsF" allowfullscreen></iframe>
-</div>
-
-<!-- Audio -->
-<div class="section">
-  <h2>Listen to the Latest Episode</h2>
-  <audio controls>
-    <source src="your-latest-episode.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-</div>
-
-<!-- Newsletter Signup -->
-<div class="section">
-  <h2>Subscribe to Our Newsletter</h2>
-  <form action="mailto:your@email.com" method="post" enctype="text/plain">
-    <input type="text" name="name" placeholder="Your name" required>
-    <input type="email" name="email" placeholder="Your email" required>
-    <button type="submit">Sign Up</button>
-  </form>
-</div>
-
-<!-- Comments -->
-<div class="section">
-  <h2>Leave a Comment</h2>
-  <form action="#" method="post">
-    <textarea name="comment" rows="4" placeholder="Your thoughts..."></textarea>
-    <button type="submit">Submit</button>
-  </form>
-  <p style="font-size: 0.9em; opacity: 0.6;">(Comments won't be saved without a backend. Future upgrade!)</p>
-</div>
-
-<!-- Scripts -->
-<script>
-  const bios = {
-    "Drew": "Since his days at Oak Hills High school, Drew has felt challenged to prove/disprove anything difficult to explain. The primary founding member of O.H. S.H.I.T. and a natural investigator, he also enjoys fishing (novice level at best... poser) and being a “Griefer” on GTA V.",
-    "Rob": "A founding member of O.H. S.H.I.T., his experiences on Buffalo Ridge as a young man coupled with 15 years of witnessing unexplained phenomena in Bars and clubs (he has a staunch belief that ghosts and entities are drawn to gathering places) has driven his curiosity. Unfortunately, curiosity does not equal courage... he’s kind of the team chicken shit.",
-    "Ty": "The youngest member of the team is also the 3rd of our Oak Hills graduates (Cincinnati’s West Side... Wes-wes yo!) Ty is the research expert for the podcast as well as a founding member of O.H. S.H.I.T.. Just don’t ask him what he’d do for obscene amounts of money... you don’t wanna know.",
-    "Steven": "The Genius of the bunch. The resident IT expert on the Ridge, the team would have a hard time getting on the internet without this cat. Just don’t give him your online passwords or you’ll end up married to a Tai mail order bride looking for U.S. residency. He’s sneaky like that..."
-  };
-
-  function showTooltip(e, name) {
-    const tooltip = document.getElementById('bio-tooltip');
-    tooltip.textContent = bios[name];
-    tooltip.style.display = 'block';
-    tooltip.style.left = e.pageX + 15 + 'px';
-    tooltip.style.top = e.pageY - 20 + 'px';
-  }
-
-  function hideTooltip() {
-    document.getElementById('bio-tooltip').style.display = 'none';
-  }
-
-  function showModal(name, imgSrc) {
-    const modal = document.getElementById('bio-modal');
-    document.getElementById('modal-img').src = imgSrc;
-    document.getElementById('modal-img').alt = name;
-    document.getElementById('modal-text').textContent = bios[name];
-    modal.style.display = 'flex';
-  }
-
-  function hideModal() {
-    document.getElementById('bio-modal').style.display = 'none';
-  }
-
-  function toggleSounds() {
-    const section = document.getElementById('sound-section');
-    section.style.display = section.style.display === 'none' ? 'block' : 'none';
-  }
-
-  function playSound(id) {
-    const sounds = document.querySelectorAll('audio');
-    sounds.forEach(audio => {
-      if (audio.id !== id) {
-        audio.pause();
-        audio.currentTime = 0;
-      }
-    });
-    const selected = document.getElementById(id);
-    if (selected) selected.play();
-  }
-
-  window.addEventListener("load", () => {
-    document.querySelectorAll('.portrait-img')?.forEach(img => {
-      img.addEventListener('mouseenter', (e) => showTooltip(e, img.alt));
-      img.addEventListener('mouseleave', hideTooltip);
-      img.addEventListener('click', () => showModal(img.alt, img.src));
-    });
-
-    document.querySelectorAll('.portrait-img-mobile')?.forEach(img => {
-      img.addEventListener('click', () => showModal(img.alt, img.src));
-    });
-  });
-</script>
-</body>
-</html>
+      padding: 20px 10px;
+      font-size: 1.3em;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      text-shadow: 1p
